tests/private_dns_eligible_create_prod/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
globalValues:
  request.operation: CREATE
policies:
  - name: validate-private-dns-eligible-create-prod
    resources:
      - name: vs-with-allowed-gateway-and-annotation
        values:
          allowedPrivateHosts: permit.com, allowed.com
      - name: vs-with-allowed-gateway-and-no-annotation
        values:
          allowedPrivateHosts: salam.com, domain.com
      - name: vs-with-disallowed-gateway
        values:
          allowedPrivateHosts: hay.com, vay.com
